# shitu

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  PRIVACY.md  README.md  README.zh-CN.md  build.rs  start.sh
.github/workflows/: release.yml
apps/shiping/: Cargo.toml  build.rs
apps/shiping/src/: audio.rs  capture.rs  config.rs  encoder.rs  main.rs  output.rs  recorder.rs  shell.rs
apps/shiping/src/application/: mod.rs  recording_service.rs  state.rs
apps/shiping/src/platform/: mod.rs  windowing.rs
apps/shiping/src/platform/windows/: audio.rs  capture.rs  encoder.rs  mod.rs  shell.rs  target.rs
apps/shiping/src/ui/: controller.rs  hotkeys.rs  mod.rs
apps/shiping/translations/en/LC_MESSAGES/: shiping.po
apps/shiping/ui/: app.slint  main-window.slint  preferences-window.slint  region-indicator-window.slint  selection-window.slint  tray.slint
apps/shitu/: Cargo.toml  build.rs
apps/shitu/src/: app.rs  config.rs  hotkey.rs  image.rs  main.rs  output.rs
apps/shitu/src/app/: annotation.rs  capture_controller.rs  pin.rs  settings.rs
apps/shitu/src/platform/: ocr.rs
apps/shitu/src/platform/windows/: clock.rs  mod.rs  startup.rs  text.rs  window.rs  windows_ai_ocr.rs
apps/shitu/translations/en/LC_MESSAGES/: shitu.po
apps/shitu/ui/: annotation-view.slint  capture-toolbar.slint  main-window.slint  overlay-window.slint  pin-window.slint  settings-panel.slint  tray.slint
apps/shiyin/: Cargo.toml
apps/shiyin/src/: main.rs
crates/shi-foundation/: Cargo.toml
crates/shi-foundation/src/: config.rs  i18n.rs  lib.rs  logging.rs
crates/shi-ui/: Cargo.toml
crates/shi-ui/src/: lib.rs
crates/shi-ui/ui/: status-bar.slint
docs/: product-design.md  shiping-product-design.md  third-party-licenses.md
packaging/: AppxManifest.xml  README.md  ShiTu.exe.manifest  gridstart.exe.manifest
src/: app.rs  capture.rs  config.rs  hotkey.rs  i18n.rs  icons.rs  image.rs  logging.rs  main.rs  model.rs  output.rs  pin.rs  scanner.rs  shell.rs
src/app/: annotation.rs  capture_controller.rs  pin.rs  settings.rs
src/platform/: clock.rs  mod.rs  ocr.rs
src/platform/windows/: clipboard.rs  file.rs  mod.rs  ocr.rs  screen_capture.rs  shell.rs  startup.rs  window.rs  window_target.rs  windows_ai_bindings.rs
tools/: package-store-msix.ps1
tools/windows-ai-bindgen/: Cargo.toml  README.md
tools/windows-ai-bindgen/src/: main.rs
translations/en/LC_MESSAGES/: gridstart.po
ui/: annotation-view.slint  app.slint  capture-toolbar.slint  main-window.slint  ocr-result-window.slint  overlay-window.slint  pin-menu-window.slint  pin-toolbar-window.slint  pin-window.slint  settings-panel.slint  status-bar.slint  tray.slint
