[package]
name = "gridstart"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
global-hotkey = "0.8"
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "=1.17.0", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-femtovg",
    "compat-1-2",
    "raw-window-handle-06",
    "system-tray"
] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
slint-build = "=1.17.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
