[workspace]
resolver = "2"
members = [
    "apps/shitu",
    "apps/shiping",
    "apps/shiyin",
    "crates/shi-foundation",
    "crates/shi-ui",
]
default-members = ["apps/shitu"]
exclude = ["tools/windows-ai-bindgen"]

[workspace.package]
version = "0.1.6"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
global-hotkey = "0.8"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
raw-window-handle = "0.6"
rfd = { version = "0.15.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "=1.17.0", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-femtovg",
    "compat-1-2",
    "raw-window-handle-06",
    "system-tray",
] }
windows = { version = "0.62", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_WinRT",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"
windows-future = "0.3.2"
slint-build = "=1.17.0"
winresource = "0.1.31"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
