[package]
name = "shiping"
version.workspace = true
edition.workspace = true
description = "ShiPing screen recorder UI prototype"
publish = false

[dependencies]
slint.workspace = true

[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true
windows.workspace = true

[build-dependencies]
slint-build.workspace = true
