[package]
name = "shiping"
version.workspace = true
edition.workspace = true
description = "ShiPing screen recorder UI prototype"
publish = false

[dependencies]
anyhow.workspace = true
global-hotkey.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
shi-foundation = { path = "../../crates/shi-foundation" }
slint = { workspace = true, features = ["unstable-winit-030"] }

[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true
windows.workspace = true

[build-dependencies]
slint-build.workspace = true
